@@ -42,13 +42,13 @@ Doug Quale, Imran Rafique, Eric Raible, Ivan Raikov, Santosh Rajan,
 Joel Reymont, "rivo", Chris Roberts, Eric Rochester, Paul Romanchenko,
 Andreas Rottman, David Rush, Lars Rustemeier, Daniel Sadilek,
 Otavio Salvador, Burton Samograd, "Sandro", "satori", Aleksej Saushev,
-Oskar Schirmer, Reed Sheridan, Ronald Schröder, Spencer Schumann,
-Ivan Shcheklein, Alexander Shendi, Alex Shinn, Ivan Shmakov, "Shmul",
-Tony Sidaway, Jeffrey B. Siegal, Andrey Sidorenko, Michele Simionato,
-Iruata Souza, Volker Stolz, Jon Strait, Dorai Sitaram, Robert Skeels,
-Jason Songhurst, Clifford Stein, David Steiner, Sunnan,
-Zbigniew Szadkowski, Rick Taube, Nathan Thern, Mike Thomas, Minh Thu,
-Christian Tismer, Andre van Tonder, John Tobey, Henrik Tramberend,
+Oskar Schirmer, Vasilij Schneidermann, Reed Sheridan, Ronald Schröder,
+Spencer Schumann, Ivan Shcheklein, Alexander Shendi, Alex Shinn, Ivan
+Shmakov, "Shmul", Tony Sidaway, Jeffrey B. Siegal, Andrey Sidorenko,
+Michele Simionato, Iruata Souza, Volker Stolz, Jon Strait, Dorai
+Sitaram, Robert Skeels, Jason Songhurst, Clifford Stein, David Steiner,
+Sunnan, Zbigniew Szadkowski, Rick Taube, Nathan Thern, Mike Thomas, Minh
+Thu, Christian Tismer, Andre van Tonder, John Tobey, Henrik Tramberend,
 Vladimir Tsichevsky, James Ursetto, Neil van Dyke, Sam Varner,
 Taylor Venable, Sander Vesik, Jaques Vidrine, Panagiotis Vossos,
 Shawn Wagner, Peter Wang, Ed Watkeys, Brad Watson, Thomas Weidner, Göran
